syntax = "proto3";

package project_creator;

import "google/api/annotations.proto";

service ProjectCreatorAPI {
    rpc CreateProject (CreateProjectRequest) returns (CreateProjectResponse) {
        option (google.api.http) = {
            post: "/createproject"
            body: "*"
        };
    }
    rpc EditProject (EditProjectRequest) returns (EditProjectResponse) {
        option (google.api.http) = {
            post: "/editproject"
            body: "*"
        };
    }
    rpc FetchProject (FetchProjectRequest) returns (FetchProjectResponse) {
        option (google.api.http) = {
            post: "/fetchproject"
            body: "*"
        };
    }
    rpc JoinProject (JoinProjectRequest) returns (JoinProjectResponse) {
        option (google.api.http) = {
            post: "/joinproject"
            body: "*"
        };
    }
    rpc FindProjects (FindProjectsRequest) returns (FindProjectsResponse) {
        option (google.api.http) = {
            post: "/findprojects"
            body: "*"
        };
    }
}

message Project {
    string title = 1;
    repeated string Users = 2;
    string description = 3;
    string deadline = 4;
    bool private = 5;
    repeated string Announcements = 6;
    int32 size = 7;
    string project_leader = 8;
    int32 progress_bar = 9;
    bool done = 10;
    string calendar = 11;
    repeated string Milestones = 12;
    repeated string Tags = 13;
    repeated string pendingUsers = 14;

}

message UserProjects {
    string email = 1;
    repeated string projects = 2;
}

message TagProjects {
    string name = 1;
    repeated string projects = 2;
}


message CreateProjectRequest {
    string email = 1;
    string title = 2;
    string description = 3;
    string deadline = 4;
    bool private = 5;
    repeated string Tags = 6;
}

message CreateProjectResponse {
    bool success = 1;
}

message FetchProjectRequest {
    string email = 1;
    string title = 2;
}

message FetchProjectResponse {
    bool success = 1;
    Project project = 2;
}

message EditProjectRequest {
    string title = 1;
    repeated string Users = 2;
    string description = 3;
    string deadline = 4;
    bool private = 5;
    int32 size = 7;
    string project_leader = 8;
    bool done = 10;
    string calendar = 11;
    repeated string Tags = 13;
}

message EditProjectResponse {
    bool success = 1;
}

message JoinProjectRequest {
    string title = 1;
    string newEmail = 2;
}

message JoinProjectResponse {
    bool success = 1;
}

message FindProjectsRequest {
    repeated string Tags = 1;
}

message FindProjectsResponse {
    bool success = 1;
    repeated Project projects = 2;
}